--- a/force-app/main/default/lwc/listContainer/listContainer.html
+++ b/force-app/main/default/lwc/listContainer/listContainer.html
@@ -45,19 +45,26 @@
                 </div>  
             </template>
             <ul class={ulCssClass}>
-                <template for:each={latestInstalls} for:item="install">
+                <template if:true={hasData} for:each={latestInstalls} for:item="install">
                     <li key={install.licenseID}>
                         <c-item-action-card class={computedChildClassName} packageversionid={install.packageVersion} parenttitle={title} title={install.packageName} installdate={install.installDateTime} expiredate={install.expirationDate} company={install.companyName} licenseid={install.licenseID} onclick={handleOptionClick} leadid={install.leadID} accountid={install.accountID} email={install.email} launchedviamodal={launchedViaModal} iscustomersimpacted={isCustomersImpacted} orgid={install.orgID} maintenancename={title} startdt={startdt} endtime={endtime} availability={availabilityText} licenseids={licenseIds} orgtype={orgtype} maintenanceid={maintenanceid}></c-item-action-card>
                     </li>
                 </template>
+                <template if:false={hasData}>
+                    <div class={computedChildClassName}>
+                        <p>No Data returned</p>
+                    </div>
+                    
+                </template>
             </ul>
-            <template if:true={showMoreLinkVisible}>
-                <div slot="footer">
-                        <lightning-button variant="base" label="View More" title="View More" onclick={viewMoreClick} class="slds-m-left_x-small"></lightning-button>
-                </div>
-            </template>
+                <template if:true={showMoreLinkVisible}>
+                    <div slot="footer">
+                            <lightning-button variant="base" label="View More" title="View More" onclick={viewMoreClick} class="slds-m-left_x-small"></lightning-button>
+                    </div>
+                </template>
         </lightning-card>
     </template>
+    
     <template if:false={hasLMAInstalls}>
         No License Data - Please install and configure LMA first
     </template>
