--- a/force-app/main/default/lwc/countdownTimer/countdownTimer.html
+++ b/force-app/main/default/lwc/countdownTimer/countdownTimer.html
@@ -25,16 +25,18 @@
                     <div class="slds-align_absolute-center slds-m-top_small">
                         <lightning-button variant="brand" label={buttonLabel} title={buttonLabel} onclick={invertExpanded} ></lightning-button>
                     </div>
-
-                    <div slot="footer">
-                        <p><lightning-formatted-url value="https://partners.salesforce.com/newPartnerCase?subtopic=BenefitsAndTools" label="Once you have a signed partnership agreement with Salesforce, raise this case to activate your org." target="_blank"></lightning-formatted-url></p>
-                        <p class="slds-m-top_xx-small"><lightning-formatted-url value="https://partners.salesforce.com/newPartnerCase?subtopic=TrialExtension" label="Need more time? Use this link to automatically extend your org expiration." target="_blank"></lightning-formatted-url></p>
-                    </div>
             </template>
         </template>
         <template if:true={orgActive}>
             <div class="slds-m-left_small">
                 This org is already active - No action required.
+            </div>
+        </template>
+
+        <template if:false={orgActive}>
+            <div slot="footer">
+                <p><lightning-formatted-url value="https://partners.salesforce.com/newPartnerCase?subtopic=BenefitsAndTools" label="Once you have a signed partnership agreement with Salesforce, raise this case to activate your org." target="_blank"></lightning-formatted-url></p>
+                <p class="slds-m-top_xx-small"><lightning-formatted-url value="https://partners.salesforce.com/newPartnerCase?subtopic=TrialExtension" label="Need more time? Use this link to automatically extend your org expiration." target="_blank"></lightning-formatted-url></p>
             </div>
         </template>
     </lightning-card>
