--- a/force-app/main/default/lwc/maintenanceEvents/maintenanceEvents.html
+++ b/force-app/main/default/lwc/maintenanceEvents/maintenanceEvents.html
@@ -7,30 +7,13 @@
             </template>
             <div class="wrapper">
                 <ul class={ulCssClass}>
-                    <template for:each={eventsdatabackup} for:item="event">
+                    <template for:each={eventsData} for:item="event">
                         <li key={event.eventName}>
-<<<<<<< HEAD
-<<<<<<< HEAD
-<<<<<<< HEAD
-<<<<<<< HEAD
                             <c-event-summary-card class={computedChildClassName}  title={event.isvconsole__Event_Name__c} id={event.isvconsole__Maintenance_External_Id__c} startdt={event.isvconsole__Start_Date_Time__c} enddt={event.isvconsole__End_Date_Time__c} numimpacted={event.isvconsole__Number_of_Impacted_Customers__c} impactedlicenseids={event.isvconsole__ImpactedLicenseIds__c} starttime={event.isvconsole__Start_Date_Time__c} endtime={event.isvconsole__End_Date_Time__c} instancename={event.isvconsole__Instance_Name__c} availability={event.isvconsole__Availability__c} maintenanceid={event.id} orgtype={orgtype}></c-event-summary-card>
-=======
-                            <c-event-summary-card class={computedChildClassName}  title={event.eventName} id={event.maintenanceId} startdt={event.startDateTime} enddt={event.endDateTime} numimpacted={event.numImpactedCustomers} impactedlicenseids={event.impactedLicenseIds} starttime={event.strStartTime} endtime={event.strEndTime} instancename={event.instanceName} availability={event.availability} ></c-event-summary-card>
->>>>>>> 6aab12d (comit july 2020)
-=======
-                            <c-event-summary-card class={computedChildClassName}  title={event.Event_Name__c} id={event.Maintenance_External_Id__c} startdt={event.Start_Date_Time__c} enddt={event.End_Date_Time__c} numimpacted={event.Number_of_Impacted_Customers__c} impactedlicenseids={event.ImpactedLicenseIds__c} starttime={event.Start_Date_Time__c} endtime={event.End_Date_Time__c} instancename={event.Instance_Name__c} availability={event.Availability__c} maintenanceid={event.id}></c-event-summary-card>
->>>>>>> d3c0005 (adding maintenance lwc changes)
-=======
-                            <c-event-summary-card class={computedChildClassName}  title={event.Event_Name__c} id={event.Maintenance_External_Id__c} startdt={event.Start_Date_Time__c} enddt={event.End_Date_Time__c} numimpacted={event.Number_of_Impacted_Customers__c} impactedlicenseids={event.ImpactedLicenseIds__c} starttime={event.Start_Date_Time__c} endtime={event.End_Date_Time__c} instancename={event.Instance_Name__c} availability={event.Availability__c} maintenanceid={event.id} orgtype={orgtype}></c-event-summary-card>
->>>>>>> e6a0a85 (added maintenance email capabilities)
-=======
-                            <c-event-summary-card class={computedChildClassName}  title={event.isvconsole__Event_Name__c} id={event.isvconsole__Maintenance_External_Id__c} startdt={event.isvconsole__Start_Date_Time__c} enddt={event.isvconsole__End_Date_Time__c} numimpacted={event.isvconsole__Number_of_Impacted_Customers__c} impactedlicenseids={event.isvconsole__ImpactedLicenseIds__c} starttime={event.isvconsole__Start_Date_Time__c} endtime={event.isvconsole__End_Date_Time__c} instancename={event.isvconsole__Instance_Name__c} availability={event.isvconsole__Availability__c} maintenanceid={event.id} orgtype={orgtype}></c-event-summary-card>
->>>>>>> c373e22 (fixed styles)
                         </li>
                     </template>
                 </ul>
             </div>
-<<<<<<< HEAD
             <div class="footerwrapper" slot="footer">
                 <div class="footerdiv"> 
                     <i>
@@ -51,26 +34,6 @@
                     </lightning-layout>
                     </i>
                 </div>
-=======
-            <div slot="footer">
-                <i>
-                <lightning-layout>
-                    <lightning-layout-item padding="around-small">
-                        <template if:true={hasBackRecords}>
-                            <lightning-button-icon icon-name="utility:left"  size="xx-small" alternative-text="Previous" onclick={pressLeft}></lightning-button-icon>
-                        </template>
-                    </lightning-layout-item>
-                    <lightning-layout-item padding="around-small">
-                        <!--{leftIndexLabel} - {rightIndex} of {numrecords}-->
-                    </lightning-layout-item>
-                    <lightning-layout-item padding="around-small">
-                        <template if:true={hasNextRecords}>
-                            <lightning-button-icon icon-name="utility:right"  size="xx-small" alternative-text="Next" onclick={pressRight}></lightning-button-icon>
-                        </template>
-                    </lightning-layout-item>
-                </lightning-layout>
-                </i>
->>>>>>> 6aab12d (comit july 2020)
             </div>
         </lightning-card>
     </template>
